--- a/pom.xml
+++ b/pom.xml
@@ -33,16 +33,17 @@
     <parent>
         <groupId>com.jcabi</groupId>
         <artifactId>jcabi</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.7.22</version>
     </parent>
     <artifactId>jcabi-jdbc</artifactId>
+    <version>0.8</version>
     <packaging>jar</packaging>
     <name>jcabi-jdbc</name>
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.jcabi</groupId>
             <artifactId>jcabi-aspects</artifactId>
-            <version>${project.version}</version>
+            <version>0.7.22</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
