--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,20 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jcabi-jdbc</name>
+    <description>Fluent Interfact to JDBC</description>
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/jcabi/jcabi-jdbc/issues</url>
+    </issueManagement>
+    <ciManagement>
+        <system>rultor</system>
+        <url>http://www.rultor.com/s/jcabi</url>
+    </ciManagement>
+    <scm>
+        <connection>scm:git:github.com:jcabi/jcabi-jdbc.git</connection>
+        <developerConnection>scm:git:github.com:jcabi/jcabi-jdbc.git</developerConnection>
+        <url>https://github.com/jcabi/jcabi-jdbc</url>
+    </scm>
     <dependencies>
         <dependency>
             <groupId>com.jcabi</groupId>
