--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <version>0.7.22</version>
     </parent>
     <artifactId>jcabi-jdbc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.10</version>
     <packaging>jar</packaging>
     <name>jcabi-jdbc</name>
     <description>Fluent Interfact to JDBC</description>
