--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>com.jcabi</groupId>
         <artifactId>parent</artifactId>
-        <version>0.10.3</version>
+        <version>0.13</version>
     </parent>
     <artifactId>jcabi-jdbc</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -55,16 +55,11 @@
     </scm>
     <distributionManagement>
         <site>
-            <id>www.jcabi.com</id>
-            <url>s3://www.jcabi.com/jcabi-jdbc</url>
+            <id>jdbc.jcabi.com</id>
+            <url>http://jdbc.jcabi.com/</url>
         </site>
     </distributionManagement>
     <dependencies>
-        <dependency>
-            <groupId>com.jcabi</groupId>
-            <artifactId>jcabi-aspects</artifactId>
-            <version>0.7.22</version>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
