#4 postgresql integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
             <url>http://jdbc.jcabi.com/</url>
         </site>
     </distributionManagement>
+    <properties>
+        <failsafe.pgsql.user>test</failsafe.pgsql.user>
+        <failsafe.pgsql.password>test</failsafe.pgsql.password>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.jcabi</groupId>
@@ -84,6 +88,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.jolbox</groupId>
             <artifactId>bonecp</artifactId>
             <version>0.8.0-rc1</version>
@@ -96,4 +106,269 @@
             </exclusions>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>reserve-network-port</goal>
+                        </goals>
+                        <configuration>
+                            <portNames>
+                                <portName>failsafe.pgsql.port</portName>
+                            </portNames>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <failsafe.pgsql.jdbc>jdbc:postgresql://localhost:${failsafe.pgsql.port}/test</failsafe.pgsql.jdbc>
+                        <failsafe.pgsql.user>${failsafe.pgsql.user}</failsafe.pgsql.user>
+                        <failsafe.pgsql.password>${failsafe.pgsql.password}</failsafe.pgsql.password>
+                    </systemPropertyVariables>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.github.adrianboimvaser</groupId>
+                <artifactId>postgresql-maven-plugin</artifactId>
+                <version>0.2-SNAPSHOT</version>
+                <configuration>
+                    <pgsqlHome>${project.build.directory}/pgsql</pgsqlHome>
+                    <dataDir>${project.build.directory}/data</dataDir>
+                    <databaseName>test</databaseName>
+                    <username>${failsafe.pgsql.user}</username>
+                    <passwordFile>${project.build.directory}/test-classes/password.txt</passwordFile>
+                    <port>${failsafe.pgsql.port}</port>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>init-db</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>initdb</goal>
+                            <goal>start</goal>
+                            <goal>createdb</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop-postgresql</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <profiles>
+        <profile>
+            <id>linux-x86</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                    <arch>x86</arch>
+                </os>
+            </activation>
+            <properties>
+                <postgresql-dist.classifier>linux</postgresql-dist.classifier>
+                <postgresql-dist.type>tar.gz</postgresql-dist.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux-x64</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <postgresql-dist.classifier>linux-x64</postgresql-dist.classifier>
+                <postgresql-dist.type>tar.gz</postgresql-dist.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows-x86</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>x86</arch>
+                </os>
+            </activation>
+            <properties>
+                <postgresql-dist.classifier>windows</postgresql-dist.classifier>
+                <postgresql-dist.type>zip</postgresql-dist.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows-x64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <postgresql-dist.classifier>windows-x64</postgresql-dist.classifier>
+                <postgresql-dist.type>zip</postgresql-dist.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>osx</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <postgresql-dist.classifier>osx</postgresql-dist.classifier>
+                <postgresql-dist.type>zip</postgresql-dist.type>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack-postgresql-osx</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>com.github.adrianboimvaser</groupId>
+                                            <artifactId>postgresql-dist</artifactId>
+                                            <classifier>${postgresql-dist.classifier}</classifier>
+                                            <version>9.2.4</version>
+                                            <type>${postgresql-dist.type}</type>
+                                            <overWrite>true</overWrite>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-postgresql-linux</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>com.github.adrianboimvaser</groupId>
+                                            <artifactId>postgresql-dist</artifactId>
+                                            <classifier>${postgresql-dist.classifier}</classifier>
+                                            <version>9.2.4</version>
+                                            <type>${postgresql-dist.type}</type>
+                                            <overWrite>true</overWrite>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>unzip-postgresql-linux</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>tar</executable>
+                                    <arguments>
+                                        <argument>-xzf</argument>
+                                        <argument>${project.build.directory}/postgresql-dist-9.2.4-${postgresql-dist.classifier}.${postgresql-dist.type}</argument>
+                                        <argument>-C</argument>
+                                        <argument>${project.build.directory}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack-postgresql-windows</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>com.github.adrianboimvaser</groupId>
+                                            <artifactId>postgresql-dist</artifactId>
+                                            <classifier>${postgresql-dist.classifier}</classifier>
+                                            <version>9.2.4</version>
+                                            <type>${postgresql-dist.type}</type>
+                                            <overWrite>true</overWrite>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
