--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jcabi</groupId>
-        <artifactId>parent</artifactId>
-        <version>0.13</version>
+        <artifactId>jcabi</artifactId>
+        <version>1.0</version>
     </parent>
     <artifactId>jcabi-jdbc</artifactId>
     <version>1.0-SNAPSHOT</version>
