#26 typo in config

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -25,7 +25,7 @@ deploy:
 
 release:
   script:
-    - "mvn versions:set \"-DnewVersion=${tag}\"'"
+    - "mvn versions:set \"-DnewVersion=${tag}\""
     - "git commit -am \"${tag}\"'"
     - "mvn clean deploy -Pqulice -Psonatype -Pjcabi --errors --settings ../settings.xml"
     - "mvn clean site-deploy -Psite --errors --settings ../settings.xml"
