--- a/.rultor.yml
+++ b/.rultor.yml
@@ -13,7 +13,7 @@ install:
 merge:
   script:
     - "mvn clean install -Pqulice --errors --settings ../settings.xml"
-    - "mvn clean'"
+    - "mvn clean"
     - "pdd --source=$(pwd) --verbose --file=/dev/null"
 
 deploy:
