--- a/.rultor.yml
+++ b/.rultor.yml
@@ -26,6 +26,6 @@ deploy:
 release:
   script:
     - "mvn versions:set \"-DnewVersion=${tag}\""
-    - "git commit -am \"${tag}\"'"
+    - "git commit -am \"${tag}\""
     - "mvn clean deploy -Pqulice -Psonatype -Pjcabi --errors --settings ../settings.xml"
     - "mvn clean site-deploy -Psite --errors --settings ../settings.xml"
