--- a/pom.xml
+++ b/pom.xml
@@ -384,6 +384,7 @@
                             <excludes>
                                 <exclude>findbugs:.*</exclude>
                                 <exclude>snapshots:.*</exclude>
+                                <exclude>dependencies:.*</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
