--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <version>1.14</version>
     </parent>
     <artifactId>jcabi-jdbc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.13</version>
     <packaging>jar</packaging>
     <name>jcabi-jdbc</name>
     <description>Fluent Interface to JDBC</description>
