--- a/.rultor.yml
+++ b/.rultor.yml
@@ -26,6 +26,8 @@ deploy:
     mvn clean
     pdd --source=$(pwd) --verbose --file=jcabi-jdbc.xml
     s3cmd --no-progress put jcabi-jdbc.xml --config=../s3cfg s3://pdd.teamed.io/jcabi-jdbc.xml
+  commanders:
+  - yegor256
 env:
   MAVEN_OPTS: -XX:MaxPermSize=256m -Xmx1g
 release:
