--- a/.rultor.yml
+++ b/.rultor.yml
@@ -12,8 +12,7 @@ merge:
     mvn clean install site -Psite -Pqulice --errors --settings ../settings.xml
     mvn clean
     pdd --source=$(pwd) --verbose --file=/dev/null
-  commanders:
-  - yegor256
+  commanders: []
 deploy:
   script: |-
     mvn clean deploy -Pqulice --errors --settings ../settings.xml
