--- a/pom.xml
+++ b/pom.xml
@@ -433,6 +433,7 @@
                                 </goals>
                                 <configuration>
                                     <repoToken>${coveralls.token.jdbc}</repoToken>
+                                    <timestampFormat>yyyy-MM-dd'T'HH:mm:ss</timestampFormat>
                                 </configuration>
                             </execution>
                         </executions>
