--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
     <version>1.24</version>
   </parent>
   <artifactId>jcabi-jdbc</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.17.3</version>
   <packaging>jar</packaging>
   <name>jcabi-jdbc</name>
   <description>Fluent Interface to JDBC</description>
