--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,18 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
         </exclusion>
       </exclusions>
     </dependency>
+    <!--
+    @todo #81:30m Migrate to Junit 5 .
+     This dependency added in order to support Junit 4 test.
+     Replace Junit 4 API with JUnit 5's and remove this
+     dependency.
+    -->
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>${junit-platform.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
