--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Test
-        run: mvn clean test --errors --batch-mode
+      - name: Test & Integration tests
+        run: mvn clean verify --errors --batch-mode
       - name: CodeCov
         uses: codecov/codecov-action@v1.0.13
         if: matrix.os == 'ubuntu-latest'
