Update psql-driver in order to fix tests

--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,9 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.1-901-1.jdbc4</version>
-      <scope>test</scope>
+      <version>42.2.19.jre7</version>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
