Update postgresql driver

--- a/pom.xml
+++ b/pom.xml
@@ -61,13 +61,13 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
   </distributionManagement>
   <dependencies>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.jcabi</groupId>
       <artifactId>jcabi-aspects</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
@@ -93,7 +93,7 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.2.23</version>
+      <version>42.2.23.jre7</version>
       <scope>test</scope>
     </dependency>
     <dependency>
