--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,31 +1,22 @@
 architect:
-- yegor256
-- andreoss
-install: |-
-  sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
-  sudo gem install pdd -v 0.20.5
-  sudo gem install xcop -v 0.6
+  - yegor256
+  - andreoss
 assets:
-  secring.gpg: yegor256/home#assets/secring.gpg
   settings.xml: yegor256/home#assets/jcabi/settings.xml
+  secring.gpg: yegor256/home#assets/secring.gpg
   pubring.gpg: yegor256/home#assets/pubring.gpg
-  s3cfg: yegor256/home#assets/s3cfg
+install: |
+  pdd --file=/dev/null
 merge:
-  script: |-
-    mvn --batch-mode clean install site -Psite -P!coveralls -Pqulice --errors --settings ../settings.xml
-    mvn --batch-mode clean
-    pdd --source=$(pwd) --verbose --file=/dev/null
-deploy:
-  script: |-
-    mvn --batch-mode clean deploy -Pqulice --errors --settings ../settings.xml
-    mvn --batch-mode clean
-    pdd --source=$(pwd) --verbose --file=jcabi-jdbc.xml
-    s3cmd --no-progress put jcabi-jdbc.xml --config=../s3cfg s3://pdd.teamed.io/jcabi-jdbc.xml
-env:
-  MAVEN_OPTS: -XX:MaxPermSize=256m -Xmx1g
+  script: |
+    mvn clean install -Pqulice --errors --batch-mode
 release:
+  pre: false
   script: |-
-    mvn versions:set "-DnewVersion=${tag}"
+    env
+    export JAVA_HOME=/usr/lib/jvm/default-java
+    mvn versions:set "-DnewVersion=${tag}" --batch-mode
     git commit -am "${tag}"
-    mvn --batch-mode clean deploy -Pqulice -Psonatype -Pjcabi --errors --settings ../settings.xml
-    mvn --batch-mode clean site-deploy -Pjcabi -Psite --errors --settings ../settings.xml
+    mvn clean deploy -Pqulice -Psonatype -Pjcabi --batch-mode --errors --settings ../settings.xml
+    mvn clean site-deploy -Psite --errors --settings ../settings.xml --batch-mode
+    
