--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
     <url>https://github.com/jcabi/jcabi-jdbc/issues</url>
   </issueManagement>
   <ciManagement>
-    <system>Travis</system>
-    <url>https://travis-ci.org/jcabi/jcabi-jdbc</url>
+    <system>Github</system>
+    <url>https://github.com/jcabi/jcabi-jdbc</url>
   </ciManagement>
   <scm>
     <connection>scm:git:github.com:jcabi/jcabi-jdbc.git</connection>
