--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,22 +1,19 @@
 docker:
-  image: yegor256/rultor-image:1.9.1
+  image: yegor256/rultor-image:1.13.0
+assets:
+  settings.xml: yegor256/home#assets/jcabi/settings.xml
+  secring.gpg: yegor256/home#assets/secring.gpg
+  pubring.gpg: yegor256/home#assets/pubring.gpg
 install: |
   pdd --file=/dev/null
-assets:
-  secring.gpg: yegor256/home#assets/secring.gpg
-  settings.xml: yegor256/home#assets/jcabi/settings.xml
-  pubring.gpg: yegor256/home#assets/pubring.gpg
 merge:
-  script: |-
-    pdd -f /dev/null
-    mvn clean install -Pqulice --errors --settings ../settings.xml
+  script: |
+    mvn clean install -Pqulice --errors --batch-mode
 release:
   pre: false
-  sensitive:
-    - settings.xml
   script: |-
-    pdd -f /dev/null
-    mvn versions:set "-DnewVersion=${tag}"
+    [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
+    mvn versions:set "-DnewVersion=${tag}" --batch-mode
     git commit -am "${tag}"
-    mvn clean deploy -Pqulice -Psonatype -Pjcabi --errors --settings ../settings.xml
-    mvn clean site-deploy -Pjcabi -Psite --errors --settings ../settings.xml
+    mvn clean deploy -Pqulice -Psonatype -Pjcabi --batch-mode --errors --settings ../settings.xml
+    mvn clean site-deploy -Psite --errors --settings ../settings.xml --batch-mode
